refactored users, fixed resources bug, removed error in console oin chat widget,added interceptor to widget

--- a/backend/LiveChat.Api/Properties/Resources.resx
+++ b/backend/LiveChat.Api/Properties/Resources.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Chat Script" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Chat Script.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1251</value>
+  <data name="chat_script" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\chat-script.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1251</value>
   </data>
-  <data name="Chat Styles" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Chat Styles.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1251</value>
+  <data name="styles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\styles.css;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1251</value>
   </data>
 </root>
